# FlaskSpark

./: CHANGELOG.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish-pypi.yml
flaskspark/: __init__.py  app.py  config.py
flaskspark/exceptions/: __init__.py  database_connection_error.py  database_incomplete_error.py
flaskspark/helpers/: login_provider.py  login_provider_default.py  login_provider_oauth.py  user_utilities.py
flaskspark/models/: role.py  user.py
flaskspark/static/images/favicon/: site.webmanifest
flaskspark/static/scripts/: app.js  webpack.js
flaskspark/static/scss/: app.scss
flaskspark/templates/: base.html
flaskspark/templates/layouts/: default.html  detached.html  framework.html  horizontal.html
flaskspark/templates/views/main/: get.html
flaskspark/views/: __init__.py  flaskspark_method_view.py  main.py
